--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,9 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "勤怠管理", '#', id: "logo" %>
+    <%= link_to "勤怠管理", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "新規登録", '#' %></li>
+        <li><%= link_to "新規登録", signup_path %></li>
       </ul>
     </nav>
   </div>
