--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,34 @@
   <div class="container">
     <%= link_to "勤怠管理", root_path, id: "logo" %>
     <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "新規登録", signup_path %></li>
+      <div class="navbar-header">
+        <button id="hamburger" type="button" class="navbar-toggle collapsed">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+      <ul id="navbar-menu" class="nav navbar-nav navbar-right collapse navbar-collapse">
+        <% if logged_in? %>
+          <li><%= link_to "出退勤記録", root_path %></li>
+          <li class="dropdown">
+            <a href="#" id="account" class="dropdown-toggle">
+              アカウント <b class="caret"></b>
+            </a>
+            <ul id="dropdown-menu" class="dropdown-menu">
+              <li><%= link_to "履歴", current_user %></li>
+              <li><%= link_to "設定", '#' %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "ログアウト", logout_path,
+                                       data: { "turbo-method": :delete } %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "ログイン", login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
