Make update system

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, '新規登録') %>
-<h1>新規登録</h1>
+<% provide(:title, "設定") %>
+<h1>情報を編集</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
