--- a/app/views/top_pages/home.html.erb
+++ b/app/views/top_pages/home.html.erb
@@ -1,2 +1,39 @@
-<h1>トップページ</h1>
+<% if logged_in? %>
+  <h1>打刻</h1>
+  <h1 id="current-time"></h1>
+  <div>
+    <%= form_with(model: @work) do |f| %>
+      <div>
+        <%= f.label :date, "日付" %>
+        <%= f.date_field :date, required: true %>
+      </div>
+
+      <div>
+        <%= f.label :start_time, "出勤時間" %>
+        <%= f.time_field :start_time, required: true %>
+        <!-- 出勤ボタン -->
+        <%= f.button "出勤", type: "button", onclick: "clockIn()" %>
+      </div>
+
+      <div>
+        <%= f.label :end_time, "退勤時間" %>
+        <%= f.time_field :end_time, required: true %>
+        <!-- 退勤ボタン -->
+        <%= f.button "退勤", type: "button", onclick: "clockOut()" %>
+      </div>
+
+      <div>
+        <%= f.label :comment, "コメント" %>
+        <%= f.text_area :comment %>
+      </div>
+
+      <!-- 登録ボタン -->
+      <div>
+        <%= f.submit "登録" %>
+      </div>
+    </div>
+  <% end %>
+<% else %>
+  <h1>ログインしてください</h1>
+<% end %>
 
