--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
       </div>
       <ul id="navbar-menu" class="nav navbar-nav navbar-right collapse navbar-collapse">
         <% if logged_in? %>
-          <li><%= link_to "出退勤記録", root_path %></li>
+          <li><%= link_to "打刻", root_path %></li>
           <li class="dropdown">
             <a href="#" id="account" class="dropdown-toggle">
               アカウント <b class="caret"></b>
