--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,15 @@
 <% provide(:title, @user.name) %>
 <div class="row">
-  <aside class="col-md-4">
+  <aside class="col-md-12">
     <section class="user_info">
       <h1>
         <%= @user.name %>
       </h1>
     </section>
   </aside>
-  <div class="col-md-8">
+  <div class="col-md-12 text-center">
     <% if @user.works.any? %>
-      <ol class="works">
+      <ol class="works list-unstyled">
         <%= render @works %>
       </ol>
       <%= will_paginate @works %>
