--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,5 +45,8 @@
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
     </div>
+    <footer>
+        <p>&copy; 2024 furusemaru</p>
+    </footer>
   </body>
 </html>
