--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,18 @@
 <%= form_with(model: @user) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
-  <%= f.label :name, "名前" %>
-  <%= f.text_field :name, class: 'form-control' %>
+  <div class="row" >
+    <div class="col-md-6">
+      <%= f.label :last_name, "姓" %>
+      <%= f.text_field :last_name, class: 'form-control' %>
+    </div>
+    <div class="col-md-6">
+      <%= f.label :first_name, "名" %>
+      <%= f.text_field :first_name, class: 'form-control' %>
+    </div>
+  </div>
+  <%= f.label :department, "部署" %>
+  <%= f.select :department, options_for_select(['営業', '開発', '人事', '総務'], selected: @user.department), { include_blank: '選択してください' }, class: 'form-control' %>
 
   <%= f.label :email, "メールアドレス" %>
   <%= f.email_field :email, class: 'form-control' %>
