--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,53 @@
-<% provide(:title, '社員記録') %>
-<h1>社員記録</h1>
+<% provide(:title, '社員一覧') %>
+<h1>社員一覧</h1>
 
-<ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= link_to user.name, user %>
-      <% if current_user.admin? && !current_user?(user) %>
-        | <%= link_to "削除", user, data: { "turbo-method": :delete,
-                                              turbo_confirm: "You sure?" } %>
+<div class="row">
+    <div class="col-md-12 text-center">
+      <%= form_tag(users_path, method: :get) do %>
+        <div class="row" >
+          <div class="col-md-6">
+            <%= label_tag :department, "部署：" %>
+            <%= select_tag :department, options_for_select(User.distinct.pluck(:department).compact, params[:department]), include_blank: true, class: "select-department" %>
+          </div>
+
+          
+          <div class="col-md-6">
+            <%= label_tag :last_name, "姓：" %>
+            <%= text_field_tag :last_name, params[:last_name], placeholder: "姓を入力", class: "select-department" %>
+          </div>
+        
+          <div class="col-md-12">
+            <%= submit_tag "検索", class: "btn btn-primary display-btn" %>
+          </div>
+        </div>
       <% end %>
-    </li>
-  <% end %>
-</ul>
+    </div>
+    <div class="col-md-12 text-center">
+      <% if @users.any? %>
+        <table class="mt-3 mb-3 table_design08" >
+          <thead>
+            <tr>
+              <th>社員ID</th>
+              <th>社員名</th>
+              <th>部署</th>
+              <th>削除</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @users.each do |user| %>
+              <% if !user.admin? %>
+              <tr>
+                <td><%= user.employee_id %></td>
+                <td><%= link_to user.fullname, user %></td>
+                <td><%= user.department %></td>
+                <td><%= link_to "削除", user, data: { "turbo-method": :delete,
+                                              turbo_confirm: "You sure?" } %></td>
+              </tr>
+              <% end %>
+            <% end %>
+          </tbody>
+        </table>
+        <%= will_paginate %>
+      <% end %>
+    </div>
+</div>
