--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,12 @@
-<% provide(:title, @user.name) %>
+<% provide(:title, @user.fullname) %>
 <div class="row">
   <aside class="col-md-12">
     <section class="user_info">
       <h1>
-        <%= @user.name %>
+        <%= @user.fullname %>
       </h1>
+      <h2>社員ID : <%= @user.employee_id %></h2>
+      <h2>所属部署 : <%= @user.department %>部</h2>
     </section>
   </aside>
     <div class="col-md-12 text-center">
@@ -26,12 +28,18 @@
         </div>
       <% end %> 
       <% if @works.any? %>
-        <table class="mt-3" >
+        <table class="mt-3 mb-3 table_design08">
           <thead>
             <tr>
               <th>日付</th>
               <th>出勤時間</th>
               <th>退勤時間</th>
+              <th>勤務時間</th>
+              <th>残業時間</th>
+              <th>コメント</th>
+              <% if @user == current_user %>
+              <th>操作</th>
+              <% end %>
             </tr>
           </thead>
           <tbody>
@@ -40,6 +48,23 @@
                 <td><%= work.date.strftime("%Y-%m-%d") %></td>
                 <td><%= work.start_time.strftime("%H:%M") %></td>
                 <td><%= work.end_time ? work.end_time.strftime("%H:%M") : "未退勤" %></td>
+                <td><%= work.working_hours %></td>
+                <td><%= work.overtime_hours %></td>
+                <td>
+                  <% if work.comment.blank? %>
+                    <span>×</span>
+                  <% else %>
+                    <span><a class="">○</a></span>
+                  <% end %>
+                </td>
+                <% if @user == current_user %>
+                <td>
+                
+                  <a href="#">編集</a>
+                  <span> | </span>
+                  <a href="#">削除</a>
+                </td>
+                <% end %>
                 <!-- 他のカラムも必要に応じて追加 -->
               </tr>
             <% end %>
@@ -48,4 +73,12 @@
       <% end %>
     </div>
     
+</div>
+<div class="row">
+  <div class="col-md-6 text-center mt-1" >
+    <h3>労働時間: <%= @total_working_hours %></h3>
+  </div>
+  <div class="col-md-6 text-center mt-1" >
+    <h3>残業時間 : <%= @total_overtime_hours %></h3>
+  </div>
 </div>
