--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -5,48 +5,71 @@
     <div class="col-md-12 text-center">
       <%= form_tag(works_path, method: :get) do %>
         <div class="row">
-          <div class="col-md-4 text-center mt-1">
+          <div class="col-md-3 text-center mt-1">
             <%= label_tag :year, "年：" %>
             <%= select_tag :year, options_for_select((Date.today.year - 5)..(Date.today.year + 5), @selected_year.to_i), prompt: "選択してください", class: "select-year" %>
           </div>
 
-          <div class="col-md-4 text-center mt-1">
+          <div class="col-md-3 text-center mt-1">
             <%= label_tag :month, "月：" %>
             <%= select_tag :month, options_for_select(1..12, @selected_month.to_i), prompt: "選択してください", class: "select-month" %>
           </div>
 
-          <div class="col-md-4 text-center mt-1">
+          <div class="col-md-3 text-center mt-1">
             <%= label_tag :day, "日：" %>
             <%= select_tag :day, options_for_select(1..31, @selected_day.to_i), prompt: "選択してください", class: "select-day" %>
+          </div>
+
+          <div class="col-md-3 text-center mt-1">
+            <%= label_tag :department, "部署：" %>
+            <%= select_tag :department, options_for_select(User.distinct.pluck(:department).compact, params[:department]), include_blank: true, class: "select-department" %>
           </div>
 
           <div class="col-md-12 text-center mt-1 ">
             <%= submit_tag "表示", class: "btn btn-primary display-btn" %>
           </div>
         </div>
-      <% end %> 
+      <% end %>
+    </div>
+    <div class="col-md-12 text-center">
       <% if @works.any? %>
-        <table class="mt-3" >
+        <table class="mt-3 mb-3 table_design08" >
           <thead>
             <tr>
-              <th>日付</th>
+              <th>社員名</th>
+              <th>部署</th>
               <th>出勤時間</th>
               <th>退勤時間</th>
-              <th>社員名</th>
+              <th>勤務時間</th>
+              <th>残業時間</th>
+              <th>コメント</th>
+              
             </tr>
           </thead>
           <tbody>
             <% @works.each do |work| %>
+              <% if !work.user.admin? %>
               <tr>
-                <td><%= work.date.strftime("%Y-%m-%d") %></td>
+                <td><%= link_to work.user.fullname, work.user %></td>
+                <td><%= work.user.department %></td>
                 <td><%= work.start_time.strftime("%H:%M") %></td>
                 <td><%= work.end_time ? work.end_time.strftime("%H:%M") : "未退勤" %></td>
-                <td><%= work.user.name %></td>
-                <!-- 他のカラムも必要に応じて追加 -->
+                <td><%= work.working_hours %>
+                <td><%= work.overtime_hours %>
+                <td>
+                  <% if work.comment.blank? %>
+                    <span>×</span>
+                  <% else %>
+                    <span><a class="">○</a></span>
+                  <% end %>
+                </td>
+
               </tr>
+              <% end %>
             <% end %>
           </tbody>
         </table>
+        <%= will_paginate @works %>
       <% end %>
     </div>
 </div>
