--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -325,3 +325,14 @@ table {
 .select-department{
   width: auto;
 }
+
+/* 勤怠情報編集 */
+.edit-date-group{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.edit-date-field{
+  width: auto;
+}
