--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -41,7 +41,7 @@
                 <td><%= link_to user.fullname, user %></td>
                 <td><%= user.department %></td>
                 <td><%= link_to "削除", user, data: { "turbo-method": :delete,
-                                              turbo_confirm: "You sure?" } %></td>
+                                              turbo_confirm: "本当に削除しますか？" } %></td>
               </tr>
               <% end %>
             <% end %>
