--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
     </div>
-    <footer>
+    <footer class="mt-3">
         <p>&copy; 2024 furusemaru</p>
     </footer>
   </body>
