--- a/app/views/works/edit.html.erb
+++ b/app/views/works/edit.html.erb
@@ -32,7 +32,7 @@
           </div>
         </div>
 
-        <div class="col-md-12 select-location mt-3">
+        <div class="col-md-12 mt-3">
           <div class="select-location-area">
             <%= f.label :location, "勤務形態", class: "display-4"%>
             <%= f.select :location , options_for_select(['出社', 'リモート'], selected: @work.location), { include_blank: '選択してください' }, class: "select-location"%>
