--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,12 +38,28 @@
 
       function enterDate() {
         // 隠しフィールドに現在の日付と時刻を設定
-        if (confirm('本当に退勤しますか？')) {
+        if (confirm('本当に登録しますか？')) {
           var now = new Date();
           var localDate = new Date(now.getTime() - now.getTimezoneOffset() * 60000);
           var formattedDate = localDate.toISOString().split('T')[0];
           document.getElementById('hidden-date').value = formattedDate;
         }
+      }
+
+      function commentPopup(comment){
+        var dialog = document.getElementById('dialog');
+        var overlay = document.getElementById('overlay');
+        var comment_box = document.getElementById('comment-content')
+        comment_box.innerHTML = comment
+        overlay.style.display = 'block';
+        dialog.style.display = 'block';
+      }
+
+      function closeDialog() {
+        var dialog = document.getElementById('dialog');
+        var overlay = document.getElementById('overlay');
+        overlay.style.display = 'none';
+        dialog.style.display = 'none';
       }
     </script>
   </head>
