--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,71 +9,76 @@
       <h2>所属部署 : <%= @user.department %>部</h2>
     </section>
   </aside>
-    <div class="col-md-12 text-center">
-      <%= form_tag(user_path(@user), method: :get) do %>
-        <div class="row">
-          <div class="col-md-4 text-center mt-1">
-            <%= label_tag :year, "年：" %>
-            <%= select_tag :year, options_for_select((Date.today.year - 5)..(Date.today.year + 5), @selected_year.to_i), prompt: "選択してください", class: "select-year" %>
-          </div>
-
-          <div class="col-md-4 text-center mt-1">
-            <%= label_tag :month, "月：" %>
-            <%= select_tag :month, options_for_select(1..12, @selected_month.to_i), prompt: "選択してください", class: "select-month" %>
-          </div>
-
-          <div class="col-md-12 text-center mt-1 ">
-            <%= submit_tag "表示", class: "btn btn-primary display-btn" %>
-          </div>
+  <div class="col-md-12 text-center">
+    <%= form_tag(user_path(@user), method: :get) do %>
+      <div class="row">
+        <div class="col-md-4 text-center mt-1">
+          <%= label_tag :year, "年：" %>
+          <%= select_tag :year, options_for_select((Date.today.year - 5)..(Date.today.year + 5), @selected_year.to_i), prompt: "選択してください", class: "select-year" %>
         </div>
-      <% end %> 
-      <% if @works.any? %>
-        <table class="mt-3 mb-3 table_design08">
-          <thead>
-            <tr>
-              <th>日付</th>
-              <th>勤務形態</th>
-              <th>出勤時間</th>
-              <th>退勤時間</th>
-              <th>勤務時間</th>
-              <th>残業時間</th>
-              <th>コメント</th>
-              <% if @user == current_user %>
-              <th>操作</th>
-              <% end %>
-            </tr>
-          </thead>
-          <tbody>
-            <% @works.each do |work| %>
-              <tr>
-                <td><%= work.date.strftime("%Y-%m-%d") %></td>
-                <td><%= work.location %>
-                <td><%= work.start_time.strftime("%H:%M") %></td>
-                <td><%= work.end_time ? work.end_time.strftime("%H:%M") : "未退勤" %></td>
-                <td><%= work.working_hours %></td>
-                <td><%= work.overtime_hours %></td>
-                <td>
-                  <% if work.comment.blank? %>
-                    <span>×</span>
-                  <% else %>
-                    <span><a class="">○</a></span>
-                  <% end %>
-                </td>
-                <% if @user == current_user %>
-                <td>
-                  <%= link_to "編集", edit_work_path(work) %>
-                  <span> | </span>
-                  <%= link_to "削除", work, data: { "turbo-method": :delete,
-                                               turbo_confirm: "本当に削除しますか" } %>
-                </td>
-                <% end %>
-                <!-- 他のカラムも必要に応じて追加 -->
-              </tr>
+
+        <div class="col-md-4 text-center mt-1">
+          <%= label_tag :month, "月：" %>
+          <%= select_tag :month, options_for_select(1..12, @selected_month.to_i), prompt: "選択してください", class: "select-month" %>
+        </div>
+
+        <div class="col-md-12 text-center mt-1 ">
+          <%= submit_tag "表示", class: "btn btn-primary display-btn" %>
+        </div>
+      </div>
+    <% end %> 
+    <% if @works.any? %>
+      <table class="mt-3 mb-3 table_design08">
+        <thead>
+          <tr>
+            <th>日付</th>
+            <th>勤務形態</th>
+            <th>出勤時間</th>
+            <th>退勤時間</th>
+            <th>勤務時間</th>
+            <th>残業時間</th>
+            <th>コメント</th>
+            <% if @user == current_user %>
+            <th>操作</th>
             <% end %>
-          </tbody>
-        </table>
-      <% end %>
-    </div>
+          </tr>
+        </thead>
+        <tbody>
+          <% @works.each do |work| %>
+            <tr>
+              <td><%= work.date.strftime("%Y-%m-%d") %></td>
+              <td><%= work.location %>
+              <td><%= work.start_time.strftime("%H:%M") %></td>
+              <td><%= work.end_time ? work.end_time.strftime("%H:%M") : "未退勤" %></td>
+              <td><%= work.working_hours %></td>
+              <td><%= work.overtime_hours %></td>
+              <td>
+                <% if work.comment.blank? %>
+                  <span>×</span>
+                <% else %>
+                  <a onclick="commentPopup('<%= work.comment %>')" >表示</a>
+                <% end %>
+              </td>
+              <% if @user == current_user %>
+              <td>
+                <%= link_to "編集", edit_work_path(work) %>
+                <span> | </span>
+                <%= link_to "削除", work, data: { "turbo-method": :delete,
+                                              turbo_confirm: "本当に削除しますか" } %>
+              </td>
+              <% end %>
+              <!-- 他のカラムも必要に応じて追加 -->
+            </tr>
+            <div id="overlay">
+            <div id="dialog">
+              <p id="comment-content"></p>
+              <button class="mt-1" id="close-btn" onclick="closeDialog()" >閉じる</button>
+            </div>
+          <% end %>
+        </tbody>
+      </table>
+    <% end %>
+  </div>
     
 </div>
 <div class="row">
