--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,6 +18,12 @@
     <%= f.label :email, "メールアドレス" %>
     <%= f.email_field :email, class: 'form-control' %>
 
+    <%= f.label :password, "パスワード" %>
+    <%= f.password_field :password, class: 'form-control' %>
+
+    <%= f.label :password_confirmation, "確認" %>
+    <%= f.password_field :password_confirmation, class: 'form-control' %>
+
     <%= f.submit "登録" , class: "btn btn-primary" %>
   <% end %>
 <% else %>
