--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,7 @@
       </div>
       <ul id="navbar-menu" class="nav navbar-nav navbar-right collapse navbar-collapse">
         <% if admin_user? %>
+          <li><%= link_to "アラート", root_path %></li>
           <li><%= link_to "社員一覧", users_path %></li>
           <li><%= link_to "勤怠記録", works_path %></li>
           <li><%= link_to "新規ユーザー登録", new_user_path  %></li>
