--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,26 +2,7 @@
 <h1>社員一覧</h1>
 
 <div class="row">
-    <div class="col-md-12 text-center">
-      <%= form_tag(users_path, method: :get) do %>
-        <div class="row" >
-          <div class="col-md-6">
-            <%= label_tag :department, "部署：" %>
-            <%= select_tag :department, options_for_select(User.distinct.pluck(:department).compact, params[:department]), include_blank: true, class: "select-department" %>
-          </div>
-
-          
-          <div class="col-md-6">
-            <%= label_tag :last_name, "姓：" %>
-            <%= text_field_tag :last_name, params[:last_name], placeholder: "姓を入力", class: "select-department" %>
-          </div>
-        
-          <div class="col-md-12">
-            <%= submit_tag "検索", class: "btn btn-primary display-btn" %>
-          </div>
-        </div>
-      <% end %>
-    </div>
+    <%= render 'search_employee' %>
     <div class="col-md-12 text-center">
       <% if @users.any? %>
         <table class="mt-3 mb-3 table_design08" >
