--- a/app/views/top_pages/home.html.erb
+++ b/app/views/top_pages/home.html.erb
@@ -1,7 +1,6 @@
 <% if admin_user? %>
   <h1>アラート</h1>
   <div class="row">
-    <%= render '/users/search_employee' %>
     <div class="col-md-12 text-center">
       <% if !@users.blank? %>
         <table class="mt-3 mb-3 table_design08" >
@@ -87,9 +86,8 @@
       </div>
     </div>
     <script>
-      document.addEventListener('turbo:render', function() {
+      document.addEventListener('turbo:load', function() {
         // 毎秒ごとに時刻を更新する関数
-        console.log('DOMContentLoaded event fired');
         function updateClock() {
           var now = new Date();
           var hours = now.getHours();
