リファクタリング

--- a/app/views/top_pages/home.html.erb
+++ b/app/views/top_pages/home.html.erb
@@ -1,122 +1,7 @@
 <% if admin_user? %>
-  <h1>アラート</h1>
-  <div class="row">
-    <div class="col-md-12 text-center">
-      <% if !@users.blank? %>
-        <table class="mt-3 mb-3 table_design08" >
-          <thead>
-            <tr>
-              <th>社員ID</th>
-              <th>社員名</th>
-              <th>部署</th>
-              <th>残業時間</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @users.each do |user| %>
-              <% if !user.admin? %>
-              <tr>
-                <td><%= user.employee_id %></td>
-                <td><%= link_to user.fullname, user %></td>
-                <td><%= user.department %></td>
-                <td><%= user.total_overtime_hours(@this_month, @this_year) %></td>
-              </tr>
-              <% end %>
-            <% end %>
-          </tbody>
-        </table>
-        <%= will_paginate @users %>
-      <% end %>
-    </div>
-  </div>
+  <%= render 'admin_view' %> 
 <% elsif logged_in? %>
-  <% provide(:title, '打刻') %>
-  <h1 id="current-date"></h1>
-  <h1 id="current-time"></h1>
-  <div class='time-stamp'>
-    <%= form_with(model: @work) do |f| %>
-      <%= render 'shared/error_messages', object: f.object %>
-      
-      <%= f.hidden_field :date, id: 'hidden-date' %>
-      
-      <div class="row">
-        
-        <div class="col-md-6 text-center start-btn">
-          <%= f.label :start_time, "出勤時間", class: "display-4" %>
-          <%= f.time_field :start_time, required: true, class: "start-field", value: "09:00" %>
-          <!-- 出勤ボタン -->
-          <%= f.button "出勤", type: "button", onclick: "clockIn()", class: "btn btn-primary" %>
-        </div>
-
-        <div class="col-md-6 text-center end-btn">
-          <%= f.label :end_time, "退勤時間", class: "display-4" %>
-          <%= f.time_field :end_time, required: true, class: "end-field", value: "18:00" %>
-          <!-- 退勤ボタン -->
-          <%= f.button "退勤", type: "button", onclick: "clockOut()", class: "btn btn-danger" %>
-        </div>
-
-        <div class="col-md-12 stamp-break-time mt-3">
-          <div class="break-time-area">
-            <%= f.label :break_time, "休憩時間", class: "display-4"%>
-            <%= f.time_field :break_time ,class: "stamp-break-time-area",value: "01:00"%>
-          </div>
-        </div>
-
-        <div class="col-md-12 mt-3">
-          <div class="select-location-area">
-            <%= f.label :location, "勤務形態", class: "display-4"%>
-            <%= f.select :location , options_for_select(['出社', 'リモート'], selected: @work.location), { include_blank: '' }, class: "select-location"%>
-          </div>
-        </div>
-
-        <div class="col-md-12 stamp-comment">
-          <div class="comment-area">
-            <%= f.label :comment, "コメント" %>
-            <%= f.text_area :comment ,class: "stamp-comment-area", placeholder: "30文字以内"%>
-          </div>
-        </div>
-
-        <!-- 登録ボタン -->
-        <div class="col-md-12 register">
-          <div class="register-group">
-            <%= f.submit "登録", class: "register-btn btn btn-warning", onclick: "enterDate()" %>
-          </div>
-        </div>
-
-      </div>
-    </div>
-    <script>
-      document.addEventListener('turbo:load', function() {
-        // 毎秒ごとに時刻を更新する関数
-        function updateClock() {
-          var now = new Date();
-          var hours = now.getHours();
-          var minutes = now.getMinutes();
-          var seconds = now.getSeconds();
-
-          // ゼロパディング
-          hours = hours < 10 ? '0' + hours : hours;
-          minutes = minutes < 10 ? '0' + minutes : minutes;
-          seconds = seconds < 10 ? '0' + seconds : seconds;
-
-          // 日付を取得
-          var options = { month: 'long', day: 'numeric', weekday: 'short' };
-          var currentDate = now.toLocaleDateString('ja-JP', options);
-
-          // 日付、時刻を表示する要素にセット
-          document.getElementById('current-date').innerText = currentDate;
-          document.getElementById('current-time').innerText = hours + ':' + minutes + ':' + seconds;
-        
-        }
-
-        // 初回実行
-        updateClock();
-
-        // 1秒ごとにupdateClock関数を実行
-        setInterval(updateClock, 1000);
-      });
-    </script>
-  <% end %>
+  <%= render 'user_view' %>
 <% else %>
   <h1>勤怠管理システム</h1>
   <div class="text-center mt-3" >
