--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -36,6 +36,6 @@
     <%= f.label :password_confirmation, "確認" %>
     <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-    <%= f.submit "登録" , class: "btn btn-primary" %>
+    <%= f.submit "変更" , class: "btn btn-primary" %>
   <% end %>
 <% end %>
